Bug 15363 - [cppcheck] found a resource leak in linux-2.6/scripts/dtc/fstree.c
Summary: [cppcheck] found a resource leak in linux-2.6/scripts/dtc/fstree.c
Status: RESOLVED CODE_FIX
Alias: None
Product: Other
Classification: Unclassified
Component: Other (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: Michal Marek
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-02-21 09:31 UTC by Martin Ettl
Modified: 2010-12-16 10:12 UTC (History)
1 user (show)

See Also:
Kernel Version: 2.6 git head
Subsystem:
Regression: No
Bisected commit-id:


Attachments
fix (272 bytes, patch)
2010-02-21 09:31 UTC, Martin Ettl
Details | Diff

Description Martin Ettl 2010-02-21 09:31:44 UTC
Created attachment 25141 [details]
fix 

during a check of the current git head of the linux kernel with the static code analysis tool cppcheck (http://sourceforge.net/apps/mediawiki/cppcheck/index.php?title=Main_Page) the tool discovered a resource leak in linux-2.6/scripts/dtc/fstree.c.

Please refer the attached patch, that fixes the issue.

Best regards

Ettl Martin
Comment 1 Michal Marek 2010-12-16 10:12:14 UTC
Patch was merged in v2.6.37-rc1.

Note You need to log in before you can comment on or make changes to this bug.